--- a/Foresome/Foresome/AfterLogin/VariationViewController/VariationViewController.xib
+++ b/Foresome/Foresome/AfterLogin/VariationViewController/VariationViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,6 +26,7 @@
                 <outlet property="secondsButtonImageView" destination="nQd-EG-kl8" id="FvB-Wv-qy1"/>
                 <outlet property="singlePlayerBtn" destination="8Sa-mJ-gIl" id="SkH-Yb-dNu"/>
                 <outlet property="variationTitle" destination="IBS-OW-9xG" id="Btr-8Q-RmB"/>
+                <outlet property="variationView" destination="dg1-ze-zmO" id="anH-dE-sg9"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -37,6 +38,35 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dg1-ze-zmO">
                     <rect key="frame" x="0.0" y="623.66666666666663" width="393" height="228.33333333333337"/>
                     <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bXS-pQ-DEJ">
+                            <rect key="frame" x="160.66666666666666" y="9" width="72" height="4"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ej-wQ-GcD">
+                                    <rect key="frame" x="0.0" y="0.0" width="72" height="4"/>
+                                    <color key="backgroundColor" red="0.90588235294117647" green="0.90588235294117647" blue="0.90588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="tintColor" red="0.90588235294117647" green="0.90588235294117647" blue="0.90588235294117647" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="isRounded" value="NO"/>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="16"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="dismissAction:" destination="-1" eventType="touchUpInside" id="8bW-9m-hBs"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" red="0.90588235294117647" green="0.90588235294117647" blue="0.90588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="72" id="1sR-Pi-5oW"/>
+                                <constraint firstAttribute="height" constant="4" id="P8W-ZY-AfP"/>
+                                <constraint firstItem="1ej-wQ-GcD" firstAttribute="top" secondItem="bXS-pQ-DEJ" secondAttribute="top" id="TFh-xW-w9e"/>
+                                <constraint firstAttribute="trailing" secondItem="1ej-wQ-GcD" secondAttribute="trailing" id="Tv1-Fw-pmY"/>
+                                <constraint firstItem="1ej-wQ-GcD" firstAttribute="leading" secondItem="bXS-pQ-DEJ" secondAttribute="leading" id="UcX-02-jhE"/>
+                                <constraint firstAttribute="bottom" secondItem="1ej-wQ-GcD" secondAttribute="bottom" id="hRg-6W-xr4"/>
+                            </constraints>
+                        </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Variation" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IBS-OW-9xG">
                             <rect key="frame" x="24" y="23" width="345" height="25.333333333333329"/>
                             <fontDescription key="fontDescription" name="Poppins-Bold" family="Poppins" pointSize="18"/>
@@ -155,45 +185,18 @@
                                 </view>
                             </subviews>
                         </stackView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ej-wQ-GcD">
-                            <rect key="frame" x="160.66666666666666" y="9" width="72" height="4"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="72" id="bVq-2e-b9z"/>
-                                <constraint firstAttribute="height" constant="4" id="fYd-h2-OwZ"/>
-                            </constraints>
-                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="boolean" keyPath="isRounded" value="NO"/>
-                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                    <real key="value" value="16"/>
-                                </userDefinedRuntimeAttribute>
-                            </userDefinedRuntimeAttributes>
-                            <connections>
-                                <action selector="dismissAction:" destination="-1" eventType="touchUpInside" id="8bW-9m-hBs"/>
-                            </connections>
-                        </button>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mtf-jw-nh9">
-                            <rect key="frame" x="160.66666666666666" y="9" width="72" height="4"/>
-                            <color key="backgroundColor" red="0.90588235294117647" green="0.90588235294117647" blue="0.90588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        </view>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="Mtf-jw-nh9" firstAttribute="trailing" secondItem="1ej-wQ-GcD" secondAttribute="trailing" id="056-Ih-GuB"/>
-                        <constraint firstItem="Mtf-jw-nh9" firstAttribute="leading" secondItem="1ej-wQ-GcD" secondAttribute="leading" id="2pC-kp-b7e"/>
                         <constraint firstItem="sPl-2T-W05" firstAttribute="leading" secondItem="dg1-ze-zmO" secondAttribute="leading" constant="24" id="AHN-bz-eVw"/>
-                        <constraint firstItem="Mtf-jw-nh9" firstAttribute="top" secondItem="1ej-wQ-GcD" secondAttribute="top" id="GfF-jF-htq"/>
+                        <constraint firstItem="bXS-pQ-DEJ" firstAttribute="centerX" secondItem="IBS-OW-9xG" secondAttribute="centerX" id="D16-gI-C97"/>
                         <constraint firstItem="sPl-2T-W05" firstAttribute="top" secondItem="IBS-OW-9xG" secondAttribute="bottom" constant="16" id="HVk-VE-RBp"/>
+                        <constraint firstItem="IBS-OW-9xG" firstAttribute="top" secondItem="bXS-pQ-DEJ" secondAttribute="bottom" constant="10" id="Kuc-Rt-8Pr"/>
                         <constraint firstAttribute="trailing" secondItem="IBS-OW-9xG" secondAttribute="trailing" constant="24" id="NgF-bo-vRC"/>
-                        <constraint firstItem="1ej-wQ-GcD" firstAttribute="top" secondItem="dg1-ze-zmO" secondAttribute="top" constant="9" id="aMd-O1-HRT"/>
+                        <constraint firstItem="bXS-pQ-DEJ" firstAttribute="top" secondItem="dg1-ze-zmO" secondAttribute="top" constant="9" id="PNP-A4-xAJ"/>
                         <constraint firstAttribute="bottom" secondItem="sPl-2T-W05" secondAttribute="bottom" constant="36" id="g1f-OR-Qwc"/>
                         <constraint firstItem="IBS-OW-9xG" firstAttribute="leading" secondItem="dg1-ze-zmO" secondAttribute="leading" constant="24" id="kER-Bx-0bl"/>
-                        <constraint firstItem="1ej-wQ-GcD" firstAttribute="centerX" secondItem="IBS-OW-9xG" secondAttribute="centerX" id="oQm-Q4-4jS"/>
-                        <constraint firstItem="IBS-OW-9xG" firstAttribute="top" secondItem="1ej-wQ-GcD" secondAttribute="bottom" constant="10" id="rBE-FH-PaI"/>
-                        <constraint firstItem="Mtf-jw-nh9" firstAttribute="bottom" secondItem="1ej-wQ-GcD" secondAttribute="bottom" id="tTz-Rm-A5l"/>
                         <constraint firstAttribute="trailing" secondItem="sPl-2T-W05" secondAttribute="trailing" constant="24" id="ubg-L0-ki2"/>
-                        <constraint firstItem="Mtf-jw-nh9" firstAttribute="height" secondItem="1ej-wQ-GcD" secondAttribute="height" id="znM-LU-ytN"/>
                     </constraints>
                 </view>
             </subviews>
