--- a/Foresome/Foresome/AfterLogin/CreatePost/View/CreatePostViewController.xib
+++ b/Foresome/Foresome/AfterLogin/CreatePost/View/CreatePostViewController.xib
@@ -23,6 +23,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CreatePostViewController" customModule="Foresome" customModuleProvider="target">
             <connections>
                 <outlet property="cameraBtn" destination="SjI-7R-ZGd" id="9bh-lb-giz"/>
+                <outlet property="creatPostTitle" destination="Lhg-la-d3H" id="0Tg-SO-kNG"/>
                 <outlet property="imageSelectButton" destination="NUz-hW-Z9L" id="qj4-NL-lp7"/>
                 <outlet property="pollBtn" destination="qt0-yJ-ygt" id="nVD-hX-AEf"/>
                 <outlet property="profileImage" destination="0yt-ab-yWw" id="6KY-zg-FUE"/>
@@ -118,7 +119,7 @@
                                     </subviews>
                                 </stackView>
                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="kR5-k2-Hl9" customClass="GrowingTextView" customModule="Foresome" customModuleProvider="target">
-                                    <rect key="frame" x="24" y="80" width="345" height="43"/>
+                                    <rect key="frame" x="24" y="80" width="345" height="30"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="textColor" systemColor="labelColor"/>
@@ -135,7 +136,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </textView>
                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="vLh-Cn-QFu">
-                                    <rect key="frame" x="0.0" y="163" width="393" height="120"/>
+                                    <rect key="frame" x="0.0" y="150" width="393" height="120"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="120" id="ZjP-eW-pze"/>
