--- a/Foresome/Foresome/AfterLogin/NewsFeed/Cell/NewsFeedTableCell.xib
+++ b/Foresome/Foresome/AfterLogin/NewsFeed/Cell/NewsFeedTableCell.xib
@@ -91,22 +91,22 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="153.66666666666666" height="184"/>
                                             </imageView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="t5v-iW-joe">
-                                                <rect key="frame" x="155.66666666666663" y="0.0" width="153.33333333333337" height="184"/>
+                                                <rect key="frame" x="155.66666666666663" y="0.0" width="153.33333333333337" height="0.0"/>
                                                 <subviews>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="minimalism" translatesAutoresizingMaskIntoConstraints="NO" id="hb3-94-78L">
-                                                        <rect key="frame" x="0.0" y="0.0" width="153.33333333333334" height="91"/>
+                                                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="minimalism" translatesAutoresizingMaskIntoConstraints="NO" id="hb3-94-78L">
+                                                        <rect key="frame" x="0.0" y="0.0" width="1920" height="0.0"/>
                                                     </imageView>
-                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zHk-7I-fQ2">
-                                                        <rect key="frame" x="0.0" y="93" width="153.33333333333334" height="91"/>
+                                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zHk-7I-fQ2">
+                                                        <rect key="frame" x="0.0" y="0.0" width="1920" height="0.0"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cccc" translatesAutoresizingMaskIntoConstraints="NO" id="aGd-Bv-Nfw">
-                                                                <rect key="frame" x="0.0" y="0.0" width="153.33333333333334" height="91"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="1920" height="0.0"/>
                                                             </imageView>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pvl-ru-FZ5">
-                                                                <rect key="frame" x="0.0" y="0.0" width="153.33333333333334" height="91"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="1920" height="0.0"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dWv-uX-F87">
-                                                                        <rect key="frame" x="65.000000000000028" y="30" width="23" height="31"/>
+                                                                        <rect key="frame" x="948.33333333333337" y="-15.333333333333329" width="23" height="31"/>
                                                                         <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="22"/>
                                                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         <nil key="highlightedColor"/>
@@ -142,6 +142,12 @@
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isRounded" value="NO"/>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                 <real key="value" value="16"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" red="0.9137254901960784" green="0.9137254901960784" blue="0.9137254901960784" alpha="1" colorSpace="calibratedRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                <real key="value" value="1"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </stackView>
@@ -248,11 +254,14 @@
                 <outlet property="imageWholeStack" destination="I8C-g1-dfJ" id="JOb-7k-BP8"/>
                 <outlet property="likeBtn" destination="J7t-MT-upl" id="AHc-UC-e0D"/>
                 <outlet property="moreBtn" destination="sAJ-qP-ws7" id="0vm-9S-7Ca"/>
+                <outlet property="outerView" destination="vss-Dr-Uw8" id="1I2-AR-D32"/>
                 <outlet property="postDescriptionLbl" destination="WAQ-RH-KcM" id="mYc-fv-Jhw"/>
                 <outlet property="postTime" destination="wx3-8g-xUU" id="Mwb-00-cCr"/>
                 <outlet property="profileImage" destination="VAA-97-CMz" id="Cdn-6V-fFH"/>
+                <outlet property="secondImageStackview" destination="t5v-iW-joe" id="bYG-7w-i5l"/>
                 <outlet property="shareBtn" destination="Tlm-Fr-QJL" id="6La-ZU-b6c"/>
                 <outlet property="thirdImageBgView" destination="zHk-7I-fQ2" id="u4e-BA-3tU"/>
+                <outlet property="thirdImageCountBgVieww" destination="Pvl-ru-FZ5" id="yH1-4g-Egv"/>
                 <outlet property="userNameLbl" destination="igW-7w-fnr" id="ifm-kc-Ch1"/>
             </connections>
             <point key="canvasLocation" x="-431.29770992366412" y="-45.070422535211272"/>
