--- a/Foresome/Foresome/Friends/View/FriendsViewController.xib
+++ b/Foresome/Foresome/Friends/View/FriendsViewController.xib
@@ -5,11 +5,13 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FriendsViewController" customModule="Foresome" customModuleProvider="target">
             <connections>
+                <outlet property="friendsTableView" destination="GUP-Xn-7gk" id="dBk-V8-Evt"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -18,20 +20,25 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="In progress...." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tot-ig-iAR">
-                    <rect key="frame" x="135.66666666666666" y="323" width="103.66666666666666" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="GUP-Xn-7gk" customClass="StrachyHeaderTable" customModule="Foresome" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="617"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="tot-ig-iAR" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="59a-Ir-xac"/>
-                <constraint firstItem="tot-ig-iAR" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="p3i-Yk-78L"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="GUP-Xn-7gk" secondAttribute="trailing" id="a5D-2H-3GG"/>
+                <constraint firstItem="GUP-Xn-7gk" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="bON-Vj-MLm"/>
+                <constraint firstAttribute="bottom" secondItem="GUP-Xn-7gk" secondAttribute="bottom" constant="50" id="ltt-Hq-BQB"/>
+                <constraint firstItem="GUP-Xn-7gk" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="uAF-Y7-4j7"/>
             </constraints>
             <point key="canvasLocation" x="37" y="0.0"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
