--- a/Foresome/Foresome/Tournament/View/TestTableHeader.xib
+++ b/Foresome/Foresome/Tournament/View/TestTableHeader.xib
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -43,34 +42,30 @@
                         </label>
                     </subviews>
                 </stackView>
-                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NhK-eL-BmC">
-                    <rect key="frame" x="318" y="199" width="48" height="48"/>
-                    <color key="backgroundColor" systemColor="systemGreenColor"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="48" id="kEe-T9-2Wk"/>
-                        <constraint firstAttribute="height" constant="48" id="p0r-BC-vL9"/>
-                    </constraints>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2LL-Ud-Hga">
+                    <rect key="frame" x="334" y="207" width="32" height="32"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                    <state key="normal" title="N"/>
+                    <state key="normal" image="ic_notification_active"/>
                     <connections>
-                        <action selector="notificationAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="RaP-IT-rEQ"/>
+                        <action selector="notificationAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="2cm-dM-aUf"/>
                     </connections>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="NhK-eL-BmC" secondAttribute="trailing" constant="24" id="5qK-ab-8aG"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="nCF-oJ-gTM" secondAttribute="trailing" id="AxO-8Y-RdY"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="QoL-va-qwq" secondAttribute="bottom" constant="32" id="I8e-Tz-Gi5"/>
+                <constraint firstItem="2LL-Ud-Hga" firstAttribute="centerY" secondItem="QoL-va-qwq" secondAttribute="centerY" id="J8a-wZ-jeO"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="2LL-Ud-Hga" secondAttribute="trailing" constant="24" id="aeZ-5h-eVX"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="nCF-oJ-gTM" secondAttribute="bottom" constant="16" id="hrE-d9-imB"/>
                 <constraint firstItem="nCF-oJ-gTM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="jEA-wr-9u2"/>
-                <constraint firstItem="NhK-eL-BmC" firstAttribute="centerY" secondItem="QoL-va-qwq" secondAttribute="centerY" id="vRm-lK-49o"/>
                 <constraint firstItem="nCF-oJ-gTM" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="veH-77-U6J"/>
                 <constraint firstItem="QoL-va-qwq" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="24" id="zZ0-Oy-tf0"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="headerTitle" destination="NuP-E6-mAk" id="ugE-8L-jly"/>
                 <outlet property="tournamentsName" destination="NuP-E6-mAk" id="mjc-bh-0Ku"/>
                 <outlet property="userName" destination="byV-uJ-PKG" id="KaJ-Bc-0lg"/>
             </connections>
@@ -78,9 +73,7 @@
         </view>
     </objects>
     <resources>
+        <image name="ic_notification_active" width="32" height="32"/>
         <image name="img_1" width="375" height="224"/>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
     </resources>
 </document>
